--- a/static/style.css
+++ b/static/style.css
@@ -194,11 +194,14 @@ z-index: -2; /*change*/
 
 /* Contact Section */
 #contact{
-position: relative;
+
+    background: url('./images/contact.jpg') no-repeat center center /cover;
+     height: 600px;
+    width: 100%;
 
 }
 
-#contact::before{
+/* #contact::before{
     content: " ";
     background: url('./images/contact.jpg') no-repeat center center /cover;
     position:absolute;
@@ -208,7 +211,7 @@ position: relative;
     
     z-index: -1;
     opacity: 0.5;
-}
+} */
 
 #contact-box{
     display: flex;
@@ -225,6 +228,7 @@ font-size: 1.1rem;
 border-radius: 9px;
 border: 1px solid gray;
 /* text-align: center; */
+outline: none;
 }
 
 #contact-box input[type="submit"]
